--- a/template/comment/_newComment.html.twig
+++ b/template/comment/_newComment.html.twig
@@ -17,7 +17,7 @@
 			</div>
 			<input type="hidden" name="articleId" value="{{ article.id }}">
 			<div class="form-group">
-				<input type="submit" value="Soumettre" name="submit">
+				<input type="submit" value="Soumettre" name="submit" class="submit-comment">
 			</div>
 
 		</form>
