--- a/template/security/register.html.twig
+++ b/template/security/register.html.twig
@@ -28,6 +28,14 @@
 				<div class="rewrite-password">
 					<input type="password" name="checkpassword" class="form-control form-control-user" id="password-verify" placeholder="Confirmer mot de passe" required>
 				</div>
+				<label>
+			<input type="checkbox" name="consent" required>
+			<span class="ml">J'accepte les
+				<a class="ML" href="/mentionsLegales" target="_blank">
+					mentions légales</a>
+			</span>
+
+		</label>
 				<button type="submit" name="submit" id="register" value="valider" class="btn btn-primary btn-user btn-block">Créer un compte</button>
 			</form>
 			<hr>
