--- a/template/admin/adminDashboard.html.twig
+++ b/template/admin/adminDashboard.html.twig
@@ -6,12 +6,12 @@
 {% block body %}
 	<h2>Tableau de bord administrateur</h2>
 
-	<div class="row">
+	<div class="table-container">
 		<div class="col-md-4">
-			<div class="edit-user">
-				<a button="edit-btn" class="edit-btn" href="user/addRole">Gérer le statut</a>
-			</div>
 			<h3>Gestion des utilisateurs</h3>
+			<div class="edit-user">
+				<a button="edit-btn" class="edit-btn" href="/admin/user/addRole">Gérer le statut</a>
+			</div>
 			<ul>
 				{% include 'admin/user/_user_profil.html.twig' %}
 			</ul>
@@ -19,17 +19,25 @@
 		<div class="col-md-4">
 
 			<h3>Gestion des articles</h3>
+			<div class="edit-article">
+				<a button="edit-btn" class="edit-btn-hidden">Modifier</a>
+			</div>
 			<ul>
 				{% include 'admin/article/_article_table.html.twig' %}
 			</ul>
 		</div>
 
 		<div class="col-md-4">
+
+			<h3>Gestion des commentaires</h3>
 			<div class="edit-comment">
 				<a button="edit-btn" class="edit-btn" href="comment/comments_pending">Modifier</a>
 			</div>
-			<h3>Gestion des commentaires</h3>
-			{% include 'admin/comment/_comment_table.html.twig' %}
+			{% if allComments is empty %}
+				<p>Pas de commentaires en attente d'approbation</p>
+			{% else %}
+				{% include 'admin/comment/_comment_table.html.twig' %}
+			{% endif %}
 		</div>
 	</div>
 
