--- a/template/admin/article/_form.html.twig
+++ b/template/admin/article/_form.html.twig
@@ -13,6 +13,6 @@
 	{% else %}
 		<input type="text" name="name" value="{{userName}}">
 	{% endif %}
-	<input type="submit" name="submit" value="Valider">
+	<input type="submit" name="submit" value="Valider" class="submit-btn">
 
 </form>
