--- a/template/admin/article/changeArticle.html.twig
+++ b/template/admin/article/changeArticle.html.twig
@@ -1,8 +1,9 @@
 {% extends 'base.html.twig' %}
+
 {% block style %}
 	{{parent()}}
 	<link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.0.8/dist/trix.css">
-	<script type="text/javascript" src="https://unpkg.com/trix@2.0.8/dist/trix.umd.min.js"></script>
+	
 {% endblock %}
 {% block body %}
 
@@ -12,4 +13,9 @@
 
 		{% include 'admin/article/_form.html.twig' %}
 	</div>
+{% endblock %}
+{% block js %}
+	{# {{ parent() }} #}
+	<script src="../js/effect.js"></script>
+	<script type="text/javascript" src="https://unpkg.com/trix@2.0.8/dist/trix.umd.min.js"></script>
 {% endblock %}
