--- a/template/admin/article/newArticle.html.twig
+++ b/template/admin/article/newArticle.html.twig
@@ -5,5 +5,9 @@
 	<script type="text/javascript" src="https://unpkg.com/trix@2.0.8/dist/trix.umd.min.js"></script>
 {% endblock %}
 {% block body %}
+<div class="txt-article">
+<h4>Ajouter un article sur mon blog</h4>
+
+</div>
 	{% include 'admin/article/_form.html.twig' %}
 {% endblock %}
