--- a/template/admin/comment/_comment_table.html.twig
+++ b/template/admin/comment/_comment_table.html.twig
@@ -1,22 +1,20 @@
 <table id="comment_table" class="display">
 	<thead>
 		<tr>
-
 			<th>Date</th>
 			<th>content</th>
 			<th>Pseudo</th>
-			<th>Mail</th>
+			<th class="none-mobile">Mail</th>
 			<th>Action</th>
-
 		</tr>
 	</thead>
 	<tbody>
 		{% for comment in allComments %}
 			<tr>
-				<td>{{ comment.date.format('Y-m-d H:i:s') }}</td>
+				<td>{{ comment.date.format('Y-m-d') }}</td>
 				<td>{{ comment.content }}</td>
 				<td>{{ comment.pseudo }}</td>
-				<td>{{ comment.mail }}</td>
+				<td class="none-mobile">{{ comment.mail }}</td>
 				<td>{{ comment.status }}</td>
 			</tr>
 
