--- a/template/contact/contact.html.twig
+++ b/template/contact/contact.html.twig
@@ -1,31 +1,26 @@
-{% block js %}
-	<script src="../js/effect.js"></script>
-{% endblock %}
-{% block body %}
-	<body>
-		<h5 class="title-contact-form">Vous souhaitez me contacter? c'est par ici</h5>
+<h5 class="title-contact-form">Formulaire de contact
+</h5>
+<form class="contact-form" action="/contact" method="POST">
+	<label for="name">Nom/Prénom:</label>
+	<input type="text" id="name" name="name" required><br><br>
 
-		<form class="contact-form" action="/contact" method="POST">
-			<label for="name">Nom/Prénom:</label>
-			<input type="text" id="name" name="name" required><br><br>
+	<label for="email">votre e-mail:</label>
+	<input type="email" id="email" name="email" required><br><br>
 
-			<label for="email">E-mail de contact:</label>
-			<input type="email" id="email" name="email" required><br><br>
+	<label for="message">Message:</label>
+	<textarea id="message" name="message" rows="4" required></textarea><br><br>
+	<div class="checkbox-submit">
+		{# gestion anti-spam #}
+		<input type="hidden" id="spam" name="spam">
+		<label>
+			<input type="checkbox" name="consent" required>
+			<span class="ml">J'accepte les
+				<a class="ML" href="/mentionsLegales" target="_blank">
+					mentions légales</a>
+			</span>
 
-			<label for="message">Message:</label>
-			<textarea id="message" name="message" rows="4" required></textarea><br><br>
-			<div class="checkbox-submit">
-				
-				{# gestion anti-spam #}
-				<input type="hidden" id="spam" name="spam">
+		</label>
+		<input type="submit" name="submit" class="submit-btn" value="Envoyer">
 
-				<input type="submit" name="submit" class="submit-btn" value="Envoyer">
-				<label>
-					<input type="checkbox" name="consent" required>
-					<p class="ml">J'accepte les mentions légales</p>
-				</label>
-			</div>
-		</form>
-	</body>
-{% endblock %}
-
+	</div>
+</form>
