--- a/template/contact/contact.html.twig
+++ b/template/contact/contact.html.twig
@@ -1,10 +1,12 @@
-<h5 class="title-contact-form">Formulaire de contact
-</h5>
+<h4>Besoin d'un devis, de plus amples information pour travailler ensemble?</h4>
+<h3 class="title-contact-form">Contactez-moi
+</h3>
+
 <form class="contact-form" action="/contact" method="POST">
 	<label for="name">Nom/Prénom:</label>
 	<input type="text" id="name" name="name" required><br><br>
 
-	<label for="email">votre e-mail:</label>
+	<label for="email">Votre e-mail:</label>
 	<input type="email" id="email" name="email" required><br><br>
 
 	<label for="message">Message:</label>
