--- a/template/admin/user/addRole.html.twig
+++ b/template/admin/user/addRole.html.twig
@@ -32,12 +32,12 @@
 						<td>
 							<form action="/admin/user/addRole" method="post" class="update-role-form">
 								<input type="hidden" name="user_id" value="{{ user.id }}">
-								<select name="role" id="role-{{ user.id }}">
+							<select name="role" id="role-{{ user.id }}">
 									<option selected disabled value="">{{ user.role|replace({'[':'', ']':'', '"':''}) }}</option>
-									<option value="member" {% if user.role == 'Utilisateur' %} selected {% endif %}>Utilisateur</option>
+									<option value="member" {% if user.role == 'Member' %} selected {% endif %}>Member</option>
 									<option value="admin" {% if user.role == 'Administrateur' %} selected {% endif %}>Administrateur</option>
 								</select>
-								<button type="submit" class="modify-btn" name="submit" value="submit">Mettre à jour</button>
+								<button type="submit" class="modify-btn update-btn" name="submit" value="submit">Mettre à jour</button>
 							</form>
 						</td>
 					</tr>
