--- a/template/article/latestArticles.html.twig
+++ b/template/article/latestArticles.html.twig
@@ -1,19 +1,28 @@
 <div class="latest-articles">
-	{% for article in articles %}
-		<div class="article-details">
-			<h2>{{ article.title }}</h2>
-			<p>{{ article.chapo|split(' ')|slice(0, 10)|join(' ') }}
-				{% if article.chapo|split(' ')|length > 10 %}
-					...
-				{% endif %}
-			</p>
-			{% if article.updateDate %}
-				<p class="date-style">Modifié le 
-					{{ article.updateDate|date('d/m/Y') }}</p>
-			{% else %}
-				<p class="date-style">Publié le 
-					{{ article.date|date('d/m/Y') }}</p>
-			{% endif %}
-		</div>
-	{% endfor %}
+	<h2>les derniers articles publiés sur mon blog, à lire sans modération!</h2>
+	<div class="article-container">
+		{% for article in articles|slice(0, 3) %}
+			<div class="article-card">
+				<h2>{{ article.title }}</h2>
+				<p>{{ article.chapo|split(' ')|slice(0, 10)|join(' ') }}
+					{% if article.chapo|split(' ')|length > 10 %}
+						...
+					{% endif %}
+				</p>
+				<p class="date-style">
+					{% if article.updateDate %}
+						Modifié le
+						{{ article.updateDate|date('d/m/Y') }}
+					{% else %}
+						Publié le
+						{{ article.date|date('d/m/Y') }}
+					{% endif %}
+				</p>
+				<p class="link-to-article">
+					<a href="/article/{{ article.id }}" target="_blank" class="link-article">Lire l'article</a>
+				</p>
+			</div>
+
+		{% endfor %}
+	</div>
 </div>
