--- a/template/home/home.html.twig
+++ b/template/home/home.html.twig
@@ -5,8 +5,8 @@
 {% block body %}
 	<div class="profile-container">
 		<div class="text-container">
-			<div class="welcome">Bienvenue sur mon blog de developpeuse web
-			</div>
+			<h1 class="welcome">Bienvenue sur mon blog de developpeuse web
+			</h1>
 			<div class="present-txt">
 				Transformer votre vision numérique en réalité, avec une touche de passion et d'innovation!
 				<br>
@@ -16,7 +16,8 @@
 		<img class="contact-img" src="./img/ludDev.jpg" alt="img-profil">
 	</div>
 	{% include 'contact/contact.html.twig' %}
+	<h2 class="CV">Pour voir et télécharger mon parcours professionnel <a href="./CV/mon-CV.pdf">cliquez ici</a></h2>
 	{% include 'article/latestArticles.html.twig' %}
-	<div class="CV">Pour voir et télécharger mon parcours professionnel <a href="./CV/mon-CV.pdf">cliquez ici</a></div>
+	
 
 {% endblock %}
