--- a/template/home/footer.html.twig
+++ b/template/home/footer.html.twig
@@ -6,7 +6,7 @@
 					<ul class="social-icons">
 
 						<li class="contact-footer">
-							<a href="mailto:ludivinezarkos@gmail.com">Contactez Moi</a>
+							<a href="#contactForm">Contactez Moi</a>
 						</li>
 						<li>
 							<a href="mailto:ludivinezarkos@gmail.com" class="social-icon">
