--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,9 @@ body {
     justify-content: center;
     margin-top: 2em;
 }
-
+html {
+    scroll-behavior: smooth;
+}
 .navbar {
     width: 100%;
     height: 250px;
@@ -680,11 +682,12 @@ select {
 }
 
 .view-comment-btn {
-    background: #3faacd;
+    background: #3faacd !important;
+    border-color: none;
 }
 
 .view-comment-btn:hover {
-    background-color: #215e72;
+    background-color: #215e72 !important;
 }
 
 .auteur-article {
@@ -709,6 +712,7 @@ ul li.comment-item {
 
 ul li p {
     margin: 5px 0;
+    
 }
 
 .comment-meta {
