--- a/template/admin/comment/comments_rejected.html.twig
+++ b/template/admin/comment/comments_rejected.html.twig
@@ -8,7 +8,7 @@
 {% block body %}
 	<h2>Commentaires non validés</h2>
 
-	<table id="comments_rejected_table" class="display">
+	<table id="comment_table" class="display">
 		<thead>
 			<tr>
 				<th>Auteur</th>
@@ -40,7 +40,7 @@
 						</form>
 					</td>
 					<td>
-						<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#commentModal{{ comment.id }}">Détails du commentaire</button>
+						<button type="button" class="btn btn-primary view-comment-btn" data-toggle="modal" data-target="#commentModal{{ comment.id }}">Voir Détails</button>
 					</td>
 				</tr>
 			{% endfor %}
