--- a/template/contact/contact.html.twig
+++ b/template/contact/contact.html.twig
@@ -2,7 +2,7 @@
 <h3 class="title-contact-form">Contactez-moi
 </h3>
 
-<form class="contact-form" action="/contact" method="POST">
+<form class="contact-form" id="contactForm" action="/contact" method="POST">
 	<label for="name">Nom/Prénom:</label>
 	<input type="text" id="name" name="name" required><br><br>
 
