--- a/template/home/home.html.twig
+++ b/template/home/home.html.twig
@@ -16,8 +16,8 @@
 		<img class="contact-img" src="./img/ludDev.jpg" alt="img-profil">
 	</div>
 	{% include 'contact/contact.html.twig' %}
-	<h2 class="CV">Pour voir et télécharger mon parcours professionnel <a href="./CV/mon-CV.pdf">cliquez ici</a></h2>
+	<h2 class="CV">Pour voir et télécharger mon parcours professionnel
+		<a href="./CV/mon-CV.pdf">cliquez ici</a>
+	</h2>
 	{% include 'article/latestArticles.html.twig' %}
-	
-
 {% endblock %}
