--- a/template/admin/comment/comments_approved.html.twig
+++ b/template/admin/comment/comments_approved.html.twig
@@ -7,7 +7,6 @@
 
 {% block body %}
 <h2>Commentaires validés</h2>
-
 <table id="comment_table" class="display">
 	<thead>
 		<tr>
@@ -27,15 +26,12 @@
 				<td>{{ comment.mail }}</td>
 				<td>{{ comment.status }}</td>
 				<td>
-
 					<form action="/admin/check-comment" method="POST">
 						<input type="hidden" name="commentId" value="{{ comment.id }}">
-
 						<select name="action">
 							<option value=""></option>
 							<option value="reject">Rejeter</option>
 						</select>
-
 						<button type="submit">Soumettre</button>
 					</form>
 				</td>
@@ -45,10 +41,4 @@
 			</tr>
 		</td>
 	</tbody>
-</tr>{% endfor %}</tbody></table>{% endblock %}
-{% block js %}
-{{ parent() }}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
-<script src="../js/datatable_init.js"></script>
-{% endblock %}
+</tr>{% endfor %}</tbody></table>{% endblock %}{% block js %}{{ parent() }}<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script><script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script><script src="../js/datatable_init.js"></script>{% endblock %}
