--- a/template/errors/error404.html.twig
+++ b/template/errors/error404.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-
-	<div class="error-type"><h1 class="erreur">Erreur 404</h1>
-	<p>Oups, il semblerait que cette page ait pris des vacances.</p>
-	<p>Retournez à la
-		<a href="/">page d'accueil</a>.</p>
-</div>
+	<div class="error-type">
+		<h1 class="erreur">Erreur 404</h1>
+		<p>Oups, il semblerait que cette page ait pris des vacances.</p>
+		<p>Retournez à la
+			<a href="/">page d'accueil</a>.</p>
+	</div>
 {% endblock %}
