blank link for CV

--- a/template/home/home.html.twig
+++ b/template/home/home.html.twig
@@ -17,7 +17,7 @@
 	</div>
 	{% include 'contact/contact.html.twig' %}
 	<h2 class="CV">Pour voir et télécharger mon parcours professionnel
-		<a href="./CV/mon-CV.pdf">cliquez ici</a>
+		<a href="./CV/mon-CV.pdf" target="_blank">cliquez ici</a>
 	</h2>
 	{% include 'article/latestArticles.html.twig' %}
 {% endblock %}
